--- a/Shared (App)/Base.lproj/Main.html
+++ b/Shared (App)/Base.lproj/Main.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <img src="../Icon.png" width="128" height="128" alt="Comfortable-PandA Icon">
-    <p class="platform-ios">You can turn on Comfortable-PandA’s Safari extension in Settings.</p>
-    <p class="platform-mac state-unknown">You can turn on Comfortable-PandA’s extension in Safari Extensions preferences.</p>
-    <p class="platform-mac state-on">Comfortable-PandA’s extension is currently on. You can turn it off in Safari Extensions preferences.</p>
-    <p class="platform-mac state-off">Comfortable-PandA’s extension is currently off. You can turn it on in Safari Extensions preferences.</p>
-    <button class="platform-mac open-preferences">Quit and Open Safari Extensions Preferences…</button>
+    <p class="platform-ios">You can turn on Comfortable PandA extension in Settings.</p>
+    <p class="platform-mac state-unknown">You can turn on Comfortable PandA extension in Safari Extensions preferences.</p>
+    <p class="platform-mac state-on">Comfortable PandA extension is currently on. You can turn it off in Safari Extensions preferences.</p>
+    <p class="platform-mac state-off">Comfortable PandA’s extension is currently off. You can turn it on in Safari Extensions preferences.</p>
+    <button class="platform-mac open-preferences">Open Safari Extensions Preferences…</button>
 </body>
 </html>
